--- a/Assignment-4/src/main/resources/application.properties
+++ b/Assignment-4/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Assignment-4
 spring.mvc.view.suffix=.html
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee-details?severTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/wipro-springboot-handson?severTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
