--- a/best-choice-car/src/main/resources/application.properties
+++ b/best-choice-car/src/main/resources/application.properties
@@ -2,8 +2,10 @@ server.port=8087
 spring.application.name=best-choice
 spring.mvc.view.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee-details?severTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/wipro-springboot-handson?severTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.data-locations=classpath:script.sql
