--- a/movflix/src/main/resources/application.properties
+++ b/movflix/src/main/resources/application.properties
@@ -2,8 +2,12 @@ server.port=8086
 spring.application.name=movflix
 spring.mvc.view.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee-details?severTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/wipro-springboot-handson?severTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+server.servlet.session.timeout=60s
